# clDNS

./: .gitlab-ci.yml  BUILDING.md  CMakeLists.txt  build.sh
dispatcherTester/: CMakeLists.txt
dispatcherTester/src/: main.cpp
gpu/: CMakeLists.txt
gpu/main/: CMakeLists.txt
gpu/main/include/: BatchDispatcher.h  Datatypes.h  InputQueueWorker.h  KernelQueueWorker.h  OCLExecutor.h  ReadQueueWorker.h
gpu/main/kernels/: preDataSHA1Batch.cl
gpu/main/src/: Base32Hex.cpp  OCLExecutor.cpp
gpu/test/: CMakeLists.txt
gpu/test/include/: testSupport.h
gpu/test/src/: main.cpp  test_batch_dispatcher.cpp
include/: Base32Hex.h  LDNSWrapper.h  batch.h  blockingconcurrentqueue.h  helper.h  testHelper.h
lib/gt/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
server/: CMakeLists.txt
server/include/: DNSRequest.h  HashQueue.h  HashWorker.h  Label.h  NSEC3Processor.h  NameLookupProcessor.h  PacketWorker.h  ResourceRecord.h  ResourceRecordSet.h  UDPReceiver.h  UDPSender.h  UDPSocket.h  Zone.h  ZoneManager.h  base64.h  udpPacket.h
server/src/: HashWorker.cpp  NSEC3Processor.cpp  NameLookupProcessor.cpp  PacketWorker.cpp  ResourceRecord.cpp  UDPReceiver.cpp  UDPSender.cpp  UDPSocket.cpp  Zone.cpp  ZoneManager.cpp  base64.cpp
server/test/: main.cpp  testBase32Hex.cpp  testZone.cpp
serverExecutable/: CMakeLists.txt
serverExecutable/src/: main.cpp
